--- a/package.json
+++ b/package.json
@@ -62,5 +62,10 @@
 		"to": "src/blocks",
 		"js": "src/js/blocks.js",
 		"omit": "@@,js-,active,opened,svg,icon-box"
+	},
+	"dependencies": {
+		"scroll-lock": "^2.1.5",
+		"swiped-events": "^1.1.9",
+		"swiper": "^11.1.0"
 	}
 }
