--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"bem": "bemtree-from-html",
 		"start": "gulp watch --dev --sync",
 		"icons": "gulp icons",
+		"icons-outer": "gulp iconsOuter",
 		"remote": "gulp watch --remote",
 		"build": "gulp build",
 		"deploy-all": "gulp deploy --all",
