add contact page

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"lightgallery": "^2.7.2",
 		"scroll-lock": "^2.1.5",
 		"swiped-events": "^1.1.9",
-		"swiper": "^11.1.0"
+		"swiper": "^11.1.0",
+		"ymaps": "^0.2.1"
 	}
 }
